# gleitzeit

./: .gitignore  ALIGNED_STREAMLINING_PLAN.md  ARCHITECTURE.md  ARCHITECTURE_CHANGES_SUMMARY.md  ARCHITECTURE_INCONSISTENCIES.md  ARCHITECTURE_SIMPLIFIED.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONSISTENCY_ANALYSIS.md  DEAD_CODE_REMOVAL.md  ERROR_MANAGEMENT_AUDIT.md  ERROR_MANAGEMENT_UPDATE_REPORT.md  EXAMPLES_OVERVIEW.md  EXTERNAL_TASKS.md  FEATURE_BRANCH_README.md  FINAL_INTEGRATION_TEST.py  FINAL_STREAMLINED_STATUS.md  GETTING_STARTED.md  GLEITZEIT_V4_ARCHITECTURE.md  HUB_ARCHITECTURE_SUMMARY.md  HUB_PERSISTENCE_DESIGN.md  INSTALL.md  MANIFEST.in  MIGRATION_PLAN.md  MISSING_FEATURES.md  MONITORING.md  NEXT_STREAMLINING_IDEAS.md  OVERVIEW.md  PROVIDER_ARCHITECTURE_SUMMARY.md  PROVIDER_HUB_REDUNDANCY_ANALYSIS.md  PROVIDER_REDUNDANCY_ANALYSIS.md  PROVIDER_REDUNDANCY_SUMMARY.md  PYTHON_FUNCTION_INTEGRATION.md  README.md  README_CLI.md  REDIS_SCHEMA.md  SOCKETIO_EVENTS.md  STREAMLINED_ARCHITECTURE.md  STREAMLINING_PLAN_UPDATED.md  STREAMLINING_SUMMARY.md  (+66 more)
base/: component.py  events.py
cleanup/: CLI_PROVIDER_UPDATES.md  GLEITZEIT_V3_ARCHITECTURE.md  OUT_OF_THE_BOX_GUIDE.md  WORKFLOW_EXECUTION_FLOW.md  clean_workflow.json  combined_workflow_20250811_101413.json  combined_workflow_20250811_102631.json  combined_workflow_20250811_103213.json  combined_workflow_20250811_103330.json  debug_event_driven_retry.py  debug_non_llm_simple.py  debug_workflow_submission.py  demo_v4_working_system.py  gleitzeit_dev.db  gleitzeit_serve.py  gleitzeit_socketio_service.py  install.sh  minimal_provider_server.py  minimal_test_v2.py  pytest.ini  setup.py  simple_test_provider.py  simple_workflow.json  socketio_architecture_proposal.md  test_async_workflow.yaml  test_execution.db
cli/: gleitzeit_cli.py  main.py
client/: __init__.py
components/: __init__.py  dependency_resolver.py  execution_engine.py  queue_manager.py
config/: providers.yaml
core/: __init__.py  batch_processor.py  errors.py  jsonrpc.py  provider_factory.py  retry_manager.py  workflow_manager.py
dashboard/: index.html
docs/: BATCH_PROCESSING_DESIGN.md  BATCH_QUICK_REFERENCE.md  CLI_COMMANDS.md  DRAFT_MULTI_INSTANCE_DOCKER_DESIGN.md  ERROR_CODES_QUICK_REFERENCE.md  ERROR_REFERENCE.md  EVENT_ROUTING.md  GLEITZEIT_V4_ARCHITECTURE.md  GLEITZEIT_V4_DESIGN.md  GLEITZEIT_V4_TEST_PLAN.md  LLM_PROVIDER_GUIDE.md  LLM_USAGE_GUIDE.md  MCP_PROVIDER_DESIGN.md  MCP_USAGE_GUIDE.md  MULTI_INSTANCE_OLLAMA_GUIDE.md  PROVIDER_IMPLEMENTATION_GUIDE.md  PROVIDER_LIFECYCLE_MANAGEMENT.md  PROVIDER_SECURITY_DOCUMENTATION.md  PUBLICATION_TODO.md  PYTHON_API_QUICK_REFERENCE.md  PYTHON_API_REFERENCE.md  README.md  TASK_QUEUE_PERSISTENCE.md  WORKFLOW_PARAMETER_SUBSTITUTION.md  getting-started.md  mcp_tutorial.md  multi-endpoint-ollama.md  multi-ollama-setup.md  overview.md
examples/: README.md  batch_text_analysis.yaml  dashboard_demo.py  decorator_example.py  error_handling_demo.py  executor_test.py  external_api_service.py  external_ml_service.py  external_task_demo.py  fixed_recovery_demo.py  full_cluster_demo.py  functions_demo.py  minimal_example.py  mixed_workflow.yaml  monitoring_demo.py  multi_endpoint_demo.py  network_retry_demo.py  ollama_integration_test.py  persistent_ollama_example.py  python_task_patterns.py  redis_integration_test.py  result_caching_demo.py  secure_python_demo.py  simple_example.py  simple_multi_endpoint.py  socketio_demo.py  socketio_integration_test.py  socketio_provider_demo.py  socketio_server_standalone.py  start_executor.py  task_recovery_demo.py  test_external_python_executor.py  test_external_tasks.py  unified_architecture_demo.py  workflow_demo.py  workflow_examples.py
gleitzeit_cluster/: __init__.py  cli.py  cli_dev.py  cli_events.py  cli_health.py  cli_monitor.py  cli_monitor_live.py  cli_monitor_pro.py  cli_providers.py  cli_results_live.py  cli_run.py
gleitzeit_cluster.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gleitzeit_extensions/: __init__.py  config_loader.py  decorators.py  helpers.py  mcp_manager.py  socketio_provider_client.py  socketio_provider_manager.py
gleitzeit_v2/: __init__.py
gleitzeit_v4/: cli.py  registry.py
gleitzeit_v5/: .gitignore  ARCHITECTURE.md  CLI_USAGE_VISION.md  README.md  __init__.py  cli.py  demo_cli_usage.py  run_tests.py  setup.py  test_image_b64.txt  working_image_b64.txt
hub/: __init__.py  central_hub.py
integrations/: mcp_integration.py
old/: ADDING_NEW_PROVIDERS.md  Dockerfile  ERROR_HANDLING.md  EXECUTOR_ARCHITECTURE.md  LICENSE  MANIFEST.in  V4_IMPLEMENTATION_REVIEW.md  WORKFLOW_DEPENDENCY_DESIGN.md  YAML_WORKFLOW_USAGE.md  combined_workflow_20250811_102243.json  debug_cors_transport.py  (+14 more)
(+377 files in other folders)
