[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gleitzeit-cluster"
version = "0.0.1"
description = "Distributed workflow orchestration system with real-time monitoring"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Leif Markthaler", email = "leif.markthaler@gmail.com"}
]
keywords = ["workflow", "orchestration", "distributed", "llm", "monitoring", "cluster"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "redis>=4.5.0",
    "python-socketio>=5.8.0", 
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0.0",
    "click>=8.0.0",
    "psutil>=5.9.0",
    "asyncio-mqtt>=0.13.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "coverage>=7.0.0",
    "ruff>=0.1.0",
]

# Documentation dependencies
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]

# Monitoring dependencies (for professional GUI)
monitor = [
    "rich>=13.0.0",  # Professional terminal interface
]

# Full feature set
all = [
    "gleitzeit-cluster[dev,docs,monitor]"
]

[project.scripts]
gleitzeit = "gleitzeit_cluster.cli:main"
gleitzeit-setup = "gleitzeit_cluster.post_install:main"

[project.urls]
"Homepage" = "https://github.com/leifmarkthaler/gleitzeit"
"Documentation" = "https://github.com/leifmarkthaler/gleitzeit#readme"
"Repository" = "https://github.com/leifmarkthaler/gleitzeit"
"Bug Reports" = "https://github.com/leifmarkthaler/gleitzeit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gleitzeit_cluster*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]